<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black"
            android:textColor="@color/orange"
            android:textAlignment="textEnd"
            android:textSize="40sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:ignore="UselessParent">

            <TableRow
                android:id="@+id/row0"
                android:layout_width="match_parent"
                android:background="@color/black"
                android:minHeight="100dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_Clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray"
                    android:onClick="onClick"
                    android:text="@string/clear"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_e1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:clickable="false"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/bt_e2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:clickable="false"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/bt_Divide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:onClick="onClick"
                    android:text="@string/divide"
                    android:textColor="@color/white" />

            </TableRow>


            <TableRow
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:background="@color/black"
                android:minHeight="100dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/seven"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/eight"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:elevation="0dp"
                    android:onClick="onClick"
                    android:text="@string/nine"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_Multiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:minWidth="150dp"
                    android:onClick="onClick"
                    android:text="@string/multiply"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp">

                <Button
                    android:id="@+id/bt_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/four"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_5"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/five"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/six"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_Plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:onClick="onClick"
                    android:text="@string/plus"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp">

                <Button
                    android:id="@+id/bt_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/one"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/two"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/three"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_Subtract"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:onClick="onClick"
                    android:text="@string/subtract"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:minHeight="100dp">


                <Button
                    android:id="@+id/bt_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:onClick="onClick"
                    android:text="@string/zero"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_Dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:text="@string/dot"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:text="@string/delete"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/orange"
                    android:onClick="onClick"
                    android:text="@string/equals"
                    android:textColor="@color/white" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>